changed UI binding BE > FE config

--- a/settings.html
+++ b/settings.html
@@ -20,6 +20,9 @@
             </li>
             <div class="d-flex">
                 <li class="nav-link mx-sm-2">
+                    <button class="btn btn-primary" id="btnLoadCfg">Load Config</button>
+                </li>
+                <li class="nav-link mx-sm-2">
                     <button class="btn btn-success" id="btnGoHome">Go back</button>
                 </li>
             </div>
@@ -32,34 +35,13 @@
                     <th scope="col">Function</th>
                     <th scope="col">Arguments</th>
                     <th scope="col"></th>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
                     <th scope="col">Action</th>
                 </tr>
             </thead>
             <tbody id="datatableBody">
-                <tr>
-                    <div id="newLabel" class="input-group">
-                        <td></td>
-                        <td>
-                            <input class="input bg-transparent m-0 form-control" type="text" id="inputNewCN">
-                        </td>
-                        <td>
-                            <input class="input bg-transparent m-0 form-control" type="text" id="inputNewModel">
-                        </td>
-                        <td>
-                            <input class="input bg-transparent m-0 form-control" type="text" id="inputNewIMEI">
-                        </td>
-                        <td>
-                            <input class="input bg-transparent m-0 form-control" type="text" id="inputNewSerial">
-                        </td>
-                        <td>
-                            <input class="input bg-transparent m-0 form-control border-opacity-10" type="text"
-                                id="inputNewSMSN">
-                        </td>
-                        <td>
-                            <button class="btn btn-outline-success" type="button" id="btnAddItem">Add</button>
-                        </td>
-                    </div>
-                </tr>
+                
             </tbody>
         </table>
     </div>
