Loading config on frontend

--- a/settings.html
+++ b/settings.html
@@ -31,7 +31,7 @@
     <div class="container-fluid">
         <table class="table table-hover table-striped me-auto" id="datatable">
             <thead>
-                <tr>
+                <tr id="header">
                     <th scope="col">Function</th>
                     <th scope="col">Arguments</th>
                     <th scope="col"></th>
