Streamlined build process (now npm run build, not build.bat) fixed remove some button

--- a/settings.html
+++ b/settings.html
@@ -29,6 +29,11 @@
         </div>
     </ul>
     <div class="container-fluid">
+        Note! <br/>
+        203 DPI => 1mm = 8 dots <br/>
+        300 DPI => 1mm = 11.8 dots <br/>
+    </div>
+    <div class="container-fluid">
         <table class="table table-hover table-striped me-auto" id="datatable">
             <thead>
                 <tr id="header">
