updated gitignore, added graphics source, icon

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </div>
         </div>
       </div>
-      <button class="btn btn-danger" id="btnClearAll">Clear some</button>
+      <button class="btn btn-danger" id="btnClearAll">Clear all</button>
     <script src="./renderer.js"></script>
 </body>
 
