--- a/settings.html
+++ b/settings.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap-utilities.min.css" />
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Settings</title>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
 </head>
 
@@ -70,8 +71,7 @@
           </div>
         </div>
       </div>
-    <div class="container-md align-bottom bg-dark text-light m-lg-5 p-3">
-        <button class="btn btn-danger" id="btnClearAll">Clear some</button>
+    <div class="container-ld align-bottom bg-dark text-light m-lg-5 p-3">
         <br/>
         We are using Node.js <span id="node-version"></span>, Chromium <span id="chrome-version"></span>, and Electron
         <span id="electron-version"></span>.
